# guicy

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Calculation.cpp  Calculation.hpp  Config.hpp  GuicyFrame.cpp  GuicyFrame.hpp  RecipePrint.hpp  Save.hpp  main.cpp
